# faust_wrap

./: meson.build
dsp/: dsp-wrap.h  llvm-dsp-wrap.h  llvm-dsp.cpp
faust_wrap/dsp/: dsp.h  libfaust.cpp  libfaust.h  llvm-dsp.cpp  llvm-dsp.h
faust_wrap/gui/: UI.h  meta.h
