project('faust_wrap', 'cpp', default_options : ['warning_level=3', 'cpp_std=c++17'])
add_project_arguments('-Wfatal-errors', '-Wno-unused', language : 'cpp')
compiler = meson.get_compiler('cpp')
libfaust_wrap = static_library('faust_wrap', 'faust_wrap/dsp/llvm-dsp.cpp', dependencies : [compiler.find_library('faust')])
libfaust_wrap = shared_library('faust_wrap', 'faust_wrap/dsp/llvm-dsp.cpp', dependencies : [compiler.find_library('faust')])
libfaust_wrap_dep = declare_dependency(include_directories : '.', link_with : libfaust_wrap)
